<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginViewModel"
            type="com.jwd.lunchvote.ui.login.LoginViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp"/>


            <ImageView
                android:id="@+id/iv_login_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@drawable/bg_login_title"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/login_email_hint"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintTop_toBottomOf="@id/iv_login_title" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{loginViewModel.viewState.email}"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/login_password_hint"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintTop_toBottomOf="@id/til_login_email" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:text="@{loginViewModel.viewState.password}"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/til_login_pwd"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toEndOf="@id/guide_end" />

            <Button
                android:id="@+id/btn_login_register"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_btn"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingVertical="12dp"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textAlignment="viewEnd"
                android:text="@string/login_register_guide"
                app:layout_constraintTop_toTopOf="@id/btn_login_register"
                app:layout_constraintBottom_toBottomOf="@id/btn_login_register"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toStartOf="@id/btn_login_register"/>

            <ImageButton
                android:id="@+id/ib_google_login"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="84dp"
                android:adjustViewBounds="true"
                android:src="@drawable/bg_google_login"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                app:cornerRadius="0dp"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintTop_toBottomOf="@id/btn_login_register"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>